# floodit-analytics

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: build-from-spec.md  spec-from-ticket.md  triage-incident.md
.github/scripts/: check_contracts.py  cost_gate.py  data_diff.py  monitoring_report.py
.github/workflows/: ci.yml  manifest.yml  replay.yml
dbt/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.example
dbt/macros/: extract_param.sql
dbt/models/marts/: _exposures.yml
dbt/models/marts/core/: _core__models.yml  dim_users.sql  fct_events.sql
dbt/models/marts/economy/: _economy__models.yml  extra_steps_economy_daily.sql
dbt/models/marts/engagement/: _engagement__models.yml  (+3 more)
dbt/models/staging/: _staging__models.yml  _staging__sources.yml  stg_floodit__events.sql  stg_floodit__events_wide_scan.sql
dbt/tests/: assert_dau_consistent_with_user_days.sql
dbt/tests/monitors/: monitor_daily_volume_in_expected_band.sql  monitor_platform_null_rate.sql
docs/: architecture.md  demo_script.md  setup.md
docs/runbooks/: incident_triage.md
incidents/: 2026-07-05_platform_null_spike_report.md
infra/: events_schema.json  main.tf  tfplan
loader/: incidents.py  replay_loader.py
loader/tests/: test_incidents.py  test_replay_loader.py
specs/: ticket_001_extra_steps_d7_retention.md  ticket_003_vip_engagement_drop.md
tickets/examples/: ticket_001_extra_steps_d7_retention.md  ticket_002_board_difficulty.md  ticket_003_vip_engagement_drop.md
(+2 files in other folders)
